# AuthService

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  EXAMPLES.md  README.md
messanger-backend/: Cargo.toml
messanger-backend/public/: index.html
messanger-backend/src/: main.rs
messanger-backend/src/handlers/: auth.rs  group.rs  message.rs
messanger-backend/src/middleware/: auth.rs
messanger-backend/src/models/: group.rs  message.rs  mod.rs  user.rs
messanger-backend/src/ws/: mod.rs
src/: auth_handlers.rs  client_service.rs  database.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  oauth_handlers.rs  oauth_service.rs  protected_handlers.rs  services.rs  token_service.rs
tests/: models_unit_tests.rs  services_unit_tests.rs  utils_unit_tests.rs
