[package]
name = "auth_service"
path = "src/lib.rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-session = { version = "0.9", features = ["cookie-session"] }
tokio = { version = "1.35", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
validator = { version = "0.16", features = ["derive"] }
jsonwebtoken = "9.2"
rand = "0.8"
base64 = "0.21"
sha2 = "0.10"
askama = "0.12"
urlencoding = "2.1"
futures = "0.3"
